examples/test/testpolicy16371.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16371
  namespace: namespace229
spec:
  podSelector:
    matchLabels:
      key24: value17
      key41: value44
      key17: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value29
          key41: value37
      podSelector:
        matchLabels:
          key34: value19
          key43: value48
          key22: value29
